<resources>
  <string name="app_name">Happy Cinema</string>
  <string name="app_title">Happy Cinema</string>

  <string name="menu_search">Search</string>
  <string name="menu_map">map</string>

  <string name="heading_today_movie">Today in the Cinema</string>
  <string name="heading_coming_movie">Coming Soon</string>
  <string name="heading_movie_theater">Movie Theater</string>

  <string name="hint_user_name">Enter User Name</string>
  <string name="hint_email">Enter Your Email</string>

  <string name="title_movies">Movies</string>

  <string name="label_item_movie_out_of_rating">/10</string>

  <string name="txt_movie_short_desc">Jake Pentecost, son of Stacker Pentecost, reunites with Mako Mori to lead a new generation of Jaeger pilots, including rival Lambert and 15-year-old hacker Amara, against a new Kaiju threat.</string>

  <string name="nav_movies">Movies</string>
  <string name="nav_theater">Movie Theater</string>
  <string name="nav_collection">My Collection</string>

  <string name="demo_theater_address">near Hanthawaddy Circle., Between Pyay Road and Kyun Taw Road, , Yangon, Myanmar</string>
  <string name="demo_theater_name">Junction Square</string>

  <string name="facebook_app_id">156135738412536</string>
  <string name="fb_login_protocol_scheme">fb156135738412536</string>
  <string name="title_gender">Select Your Gender</string>
  <string name="title_location">Choose Your Region</string>
  <string name="txt_register">Register</string>
  <string name="transition_movie_poster">Transition Movie Poster</string>
  <string name="transition_movie_genre">Transition Movie Genre</string>
  <string name="transition_movie_title">Transition Moview Title</string>
  <string name="transition_movie_kind">Transition Movie Kind</string>
  <string name="transition_movie_language">Transition Movie Language</string>
  <string name="txt_show_more">Show More</string>

  <string-array name="gender_arrays">
    <item>Choose Your Gender</item>
    <item>Male</item>
    <item>Female</item>
  </string-array>

  <string-array name="region_arrays">
    <item>Choose Your Region</item>
    <item>Yangon</item>
    <item>Nay Pyi Taw</item>
    <item>Mandalay</item>
    <!--<item>Bago</item>
    <item>Magway</item>
    <item>Ayeyarwady</item>
    <item>Tanintharyi</item>
    <item>Rakhine</item>
    <item>Shan</item>
    <item>Mon</item>
    <item>Kayin</item>
    <item>Kachin</item>
    <item>Kayah</item>
    <item>Sagaing</item>
    <item>Chin</item>-->
  </string-array>

</resources>
