<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    >

  <android.support.v7.widget.CardView
      android:id="@+id/cv_movie"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/margin_small"
      android:layout_marginLeft="@dimen/margin_small"
      android:layout_marginRight="@dimen/margin_small"
      android:layout_marginTop="@dimen/margin_small"
      android:clickable="true"
      android:focusable="true"
      android:foreground="@drawable/ripple_white"
      app:cardBackgroundColor="@color/colorWhite"
      app:cardCornerRadius="@dimen/cardview_corner_radius"
      app:cardElevation="@dimen/margin_tiny"
      >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

      <ImageView
          android:id="@+id/iv_movie_poster"
          android:layout_width="120dp"
          android:layout_height="175dp"
          android:layout_marginBottom="@dimen/margin_small"
          android:layout_marginLeft="@dimen/margin_small"
          android:layout_marginStart="@dimen/margin_small"
          android:layout_marginTop="@dimen/margin_small"
          android:scaleType="centerCrop"
          android:src="@mipmap/movie_sample"
          android:transitionName="@string/transition_movie_poster"
          />

      <TextView
          android:id="@+id/tv_movie_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/margin_normal"
          android:layout_marginLeft="@dimen/margin_tiny"
          android:layout_marginRight="@dimen/margin_normal"
          android:layout_marginStart="@dimen/margin_tiny"
          android:layout_marginTop="@dimen/margin_small"
          android:layout_toRightOf="@id/iv_movie_poster"
          android:fontFamily="sans-serif-condensed"
          android:text="Pacific Rim Uprising"
          android:textColor="@color/colorLightBlack"
          android:textSize="@dimen/font_normal"
          android:textStyle="bold"
          android:transitionName="@string/transition_movie_title"
          app:layout_constraintTop_toTopOf="parent"
          />

      <ImageView
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:layout_alignParentEnd="true"
          android:layout_alignParentRight="true"
          android:layout_marginEnd="@dimen/margin_tiny"
          android:layout_marginRight="@dimen/margin_tiny"
          android:layout_marginTop="@dimen/margin_tiny_n"
          android:src="@drawable/ic_bookmark_border_black_24dp"
          />

      <android.support.v7.widget.RecyclerView
          android:id="@+id/rv_genre"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@id/tv_movie_title"
          android:layout_marginEnd="@dimen/margin_small"
          android:layout_marginRight="@dimen/margin_small"
          android:layout_toRightOf="@id/iv_movie_poster"
          android:transitionName="@string/transition_movie_genre"
          />

      <android.support.constraint.ConstraintLayout
          android:id="@+id/layout_movie_type"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@id/rv_genre"
          android:layout_marginEnd="@dimen/margin_small"
          android:layout_marginLeft="@dimen/margin_tiny"
          android:layout_marginRight="@dimen/margin_small"
          android:layout_marginStart="@dimen/margin_tiny"
          android:layout_toEndOf="@id/iv_movie_poster"
          android:layout_toRightOf="@id/iv_movie_poster"
          >

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_tiny"
            android:fontFamily="sans-serif-condensed"
            android:text="8"
            android:textColor="@color/colorLightBlack"
            android:textSize="@dimen/font_large"
            android:gravity="bottom"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/tv_outOf_rating"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-condensed"
            android:gravity="bottom"
            android:text="@string/label_item_movie_out_of_rating"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/font_normal"
            app:layout_constraintBottom_toBottomOf="@id/tv_rating"
            app:layout_constraintStart_toEndOf="@id/tv_rating"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/tv_movie_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginStart="@dimen/margin_normal"
            android:background="@drawable/bg_rounded_dark_pink"
            android:paddingBottom="@dimen/margin_tiny"
            android:paddingLeft="@dimen/margin_normal"
            android:paddingRight="@dimen/margin_normal"
            android:paddingTop="@dimen/margin_tiny"
            android:text="3D"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/font_small"
            android:transitionName="@string/transition_movie_kind"
            app:layout_constraintBottom_toBottomOf="@id/tv_outOf_rating"
            app:layout_constraintStart_toEndOf="@id/tv_outOf_rating"
            />

        <TextView
            android:id="@+id/tv_movie_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_tiny"
            android:layout_marginStart="@dimen/margin_tiny"
            android:background="@drawable/bg_rounded_pink"
            android:paddingBottom="@dimen/margin_tiny"
            android:paddingLeft="@dimen/margin_normal"
            android:paddingRight="@dimen/margin_normal"
            android:paddingTop="@dimen/margin_tiny"
            android:text="ENG"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/font_small"
            android:transitionName="@string/transition_movie_language"
            app:layout_constraintBottom_toBottomOf="@id/tv_movie_type"
            app:layout_constraintStart_toEndOf="@id/tv_movie_type"
            />

      </android.support.constraint.ConstraintLayout>

      <TextView
          android:id="@+id/tv_movie_short_desc"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@id/layout_movie_type"
          android:layout_marginEnd="@dimen/margin_small"
          android:layout_marginLeft="@dimen/margin_tiny"
          android:layout_marginRight="@dimen/margin_small"
          android:layout_marginStart="@dimen/margin_tiny"
          android:layout_marginTop="@dimen/margin_tiny"
          android:layout_toRightOf="@id/iv_movie_poster"
          android:ellipsize="end"
          android:fontFamily="sans-serif-condensed"
          android:lineSpacingMultiplier="1.2"
          android:maxLines="3"
          android:text="@string/txt_movie_short_desc"
          android:textColor="@color/colorLightBlack"
          android:textSize="@dimen/font_small"
          />

      <View
          android:id="@+id/view"
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:layout_below="@id/tv_movie_short_desc"
          android:layout_marginLeft="@dimen/margin_large"
          android:layout_marginRight="@dimen/margin_large"
          android:layout_marginTop="@dimen/margin_small"
          android:layout_toRightOf="@id/iv_movie_poster"
          android:background="@color/colorAccent"
          />

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@id/view"
          android:layout_marginEnd="@dimen/margin_small"
          android:layout_marginLeft="@dimen/margin_tiny"
          android:layout_marginRight="@dimen/margin_small"
          android:layout_marginStart="@dimen/margin_tiny"
          android:layout_toRightOf="@id/iv_movie_poster"
          android:orientation="horizontal"
          >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_booked_profile"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="@dimen/margin_small"
            />

        <TextView
            android:id="@+id/tv_booked_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_tiny"
            android:layout_marginStart="@dimen/margin_tiny"
            android:layout_marginTop="@dimen/margin_tiny"
            android:fontFamily="sans-serif-condensed"
            android:text="+300"
            android:textColor="@color/colorLightBlack"
            android:textSize="@dimen/font_normal"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_tiny"
            android:layout_marginStart="@dimen/margin_tiny"
            android:layout_marginTop="@dimen/margin_tiny"
            android:fontFamily="sans-serif-condensed"
            android:text="booked this movie"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/font_small"
            />

      </LinearLayout>

    </RelativeLayout>

  </android.support.v7.widget.CardView>

</FrameLayout>